<resources>
    <!--メインメニュー-->

    <string name="app_name">Carefree Sleep Zzz...</string>
    <string name="alart">ボタンを押すと就寝タイマーがスタートします！</string>
    <string name="sleep">睡眠時間チェッカー(not work)</string>
    <string name="wakeup">目覚まし</string>
    <string name="config">設定(not work)</string>
    <string name="main">メニュー</string>

    <!--睡眠時間チェッカー-->

    <string name="avg_sleeptime">平均の睡眠時間：</string>
    <string name="rcm_sleeptime">推奨の睡眠時間：</string>
    <string name="last_sleeptime">前回寝た時間：</string>
    <string name="today_getuptime">今日起きた時間：</string>
    <string name="title_activity_config">設定</string>

    <!--設定画面-->
    <string name="conf1">あなたの年代：</string>
    <string name="conf2">睡眠グラフに反映する期間：</string>
    <string name="conf3">寝た方がいい時間の通知：</string>
    <string name="conf4">寝る時間に入る前通知時間：</string>
    <string name="conf5">UIサイズ変更</string>
    <string name="conf6">設定を初期化</string>
    <string name="conf7">作った人に文句言うとこ(問い合わせ)</string>

    <!--目覚まし-->
    <string name="edit_getup">1</string>
    <string name="edit_timer">起きる時間：</string>
    <string name="selectBGM">効果音/音楽を設定</string>
    <string name="add_time">目覚まし追加</string>

</resources>
