<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#b79b5b">
    <!--#f0f8ff-->
    <!--ここにLinerLayountを追加しないと座標の実装がされない
            ちなこのレイアウトは寝る起きるボタンとタイトル用
    -->

    <!--layout_gravityは文字や部品の中身のコンテンツを揃える
    　　gravityは部品の位置を揃える-->



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:text="現在時刻"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor=""/>

        <TextClock
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:timeZone="Asia/Tokyo"
            android:format24Hour="HH:mm:ss"
            tools:ignore="MissingConstraints" />

        <!--タイトルのレイアウト-->

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginTop="70dp"
            android:textColor="#21130F"
            android:fontFamily="@font/ellianeregular"
            android:text="@string/app_name"
            android:textSize="46dp" />

        <EditText
            android:background="@color/lightgray"
            android:id="@+id/hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="時"/>

        <EditText
            android:background="@color/lightgray"
            android:id="@+id/minute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="分"/>

        <TextView
            android:id="@+id/confview"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:textSize="24sp" />

            <!--寝るボタンのレイアウト-->

        <Button
            android:layout_gravity="center"
            android:id="@+id/sleep"
            android:layout_width="300dp"
            android:layout_height="165dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@null"
            android:background="@drawable/shape_test"
            android:fontFamily="sans-serif-condensed"
            android:text="寝る！！！"
            android:textSize="30dp" /><!-- android:background="#f08080" -->

            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/alart"
                android:textColor="#000000"
                android:textSize="14dp" />

        <!--下のボタン3つのレイアウト-->

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            >

            <Button
                android:id="@+id/bt_sleep"
                android:layout_marginRight="5dp"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:background="@drawable/shape_purple"
                android:text="@string/sleep" />
-->
            <!-- ↑ android:layout_marginLeft="20dp"-->
<!--
            <Button
                android:id="@+id/bt_wakeup"
                android:layout_marginRight="5dp"
                android:layout_width="110dp"
                android:background="@drawable/shape_purple"
                android:layout_height="match_parent"
                android:text="@string/wakeup" />

            <Button
                android:id="@+id/bt_configs"
                android:layout_width="110dp"
                android:background="@drawable/shape_purple"
                android:layout_height="match_parent"
                android:text="@string/config" />

        </LinearLayout>
-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_marginBottom="40dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            >

            <Button
                android:id="@+id/bt_sleep"
                android:layout_marginRight="5dp"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:background="@drawable/shape_purple"
                android:text="@string/sleep" />
            <!-- ↑ android:layout_marginLeft="20dp"-->

            <Button
                android:id="@+id/bt_wakeup"
                android:layout_marginRight="5dp"
                android:layout_width="110dp"
                android:background="@drawable/shape_purple"
                android:layout_height="match_parent"
                android:text="@string/wakeup" />

            <Button
                android:id="@+id/bt_configs"
                android:layout_width="110dp"
                android:background="@drawable/shape_purple"
                android:layout_height="match_parent"
                android:text="@string/config" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>